Updated - User submitted, ect.

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
   <td height='14' valign='top'>
   <div align='center'>
   <span class='style1'>
-  &copy; Tbdev Installer 09
+  &copy; U-232
   </span>
   </div>
   </td>
